--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/login.css"> <!-- Usar login.css para estilos compartidos -->
     <link rel="stylesheet" href="css/media.css">
     <script src="js/forms.js" defer></script>
+    <script defer src="js/auth.js"></script>
+    <script defer src="js/sessionTimeout.js"></script>
 </head>
 <body>
     <header>
