--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,8 @@
     <script src="js/facturacion.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
+    <script defer src="js/auth.js"></script>
+    <script defer src="js/sessionTimeout.js"></script>
 </head>
 <body>
     <header>
