--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,7 @@
     <script src="js/nav.js" defer></script>
     <script defer src="js/auth.js"></script>
     <script defer src="js/sessionTimeout.js"></script>
+    <script src="js/logout.js" defer></script>
 </head>
 <body>
     <header>
@@ -48,8 +49,8 @@
         <section id="programacion" class="content-section">
             <!-- <h2>Programación</h2> -->
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=drivesdk')">Vacaciones y Guardias 2024</button>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=drive_link')">Vacaciones y Guardias 2025</button>
+            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
+            <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1vB-44gFZ0czuDXqeHO9g-DZLP7h82Yi_/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2024/2025</button>
         </section>
         <section id="facturacion" class="content-section" style="display:none;">
@@ -75,9 +76,9 @@
                     <li><a href="https://drive.google.com/file/d/1lyBxPOq78zfdfgAYqfJLFOhcUQnlCKDe/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2018</a></li>
                     <li><a href="https://drive.google.com/file/d/1ucXPTH36aYWAosTWHWG7kQJhOeuoPabp/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ARAAR 2022</a></li>
                     <li><a href="https://drive.google.com/file/d/1tZwE2drmMs_k7IEQHtT0I5TajGOmCaO9/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
+                    <li><a href="https://drive.google.com/file/d/1u3pc0eoJxFGhSv6cmGuTEcdF3g5ek9XV/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> NIVELES</a></li>
                     <li><a href="https://drive.google.com/file/d/1t_n0KrS91wWrbuemFCX2v-aw2rxHnDh7/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
                     <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
-                    <li><a href="https://drive.google.com/file/d/1TFUlB0oSmXuR6VIF9qCKboBomMypI_IH/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI</a></li>
                 </ul>
                 <button onclick="openFile('https://docs.google.com/document/d/1Qi-4nLkx5JaC6ENG58FqGUWTfMmmB86n/edit?usp=drive_link&ouid=116849778907664010256&rtpof=true&sd=true')">Nomenclado sugerido</button>
                 <button onclick="openFile('https://drive.google.com/file/d/1QqyHrtqT5lYKlDh7KKsF6noO7EJdeYxV/view?usp=drive_link')">Pautas según O.S.</button>
