--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
     <script src="js/facturacion.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
-    <script defer src="js/auth.js"></script>
-    <script defer src="js/sessionTimeout.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/sessionTimeout.js"></script>
     <script src="js/logout.js" defer></script>
 </head>
 <body>
@@ -81,7 +81,7 @@
                     <li><a href="https://drive.google.com/file/d/1LBt0piXrQkohi2Isvt9Hsq76VKs7v2Pw/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
                 </ul>
                 <button onclick="openFile('https://docs.google.com/document/d/1Qi-4nLkx5JaC6ENG58FqGUWTfMmmB86n/edit?usp=drive_link&ouid=116849778907664010256&rtpof=true&sd=true')">Nomenclado sugerido</button>
-                <button onclick="openFile('https://drive.google.com/file/d/1QqyHrtqT5lYKlDh7KKsF6noO7EJdeYxV/view?usp=drive_link')">Pautas según O.S.</button>
+                <button onclick="openFile('https://drive.google.com/file/d/1ZHN37WW5mIJ64f0eSgNFfNY9PKlwdB3N/view?usp=sharing')">Pautas según O.S.</button>
             </fieldset>
         </section>
         <section id="liquidaciones" class="content-section" style="display:none;">
