--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
         <button onclick="showSection('facturacion')">Facturación y Nomenclado</button>
         <button onclick="showSection('liquidaciones')">Liquidaciones e Ingresos</button>
         <button onclick="showSection('reuniones')">Reuniones y Estatuto</button>
-        <button onclick="showSection('materiales')">Materiales</button>
+        <button onclick="showSection('varios')">Varios</button>
     </nav>
     <main>
         <section id="programacion" class="content-section">
@@ -100,9 +100,11 @@
             <button onclick="openFile('https://drive.google.com/drive/folders/1mOhFcf6yHZuIIpDmeWz3afzNZuz-5uje?usp=drive_link')">Resúmenes reuniones</button>
             <button onclick="openFile('https://drive.google.com/file/d/1XyDopUZhfHXkxZGXJnEa5UdmhqjR7HI1/view?usp=sharing')">Estatuto</button>
         </section>
-        <section id="materiales" class="content-section" style="display:none;">
-            <!-- <h2>Materiales</h2> -->
+        <section id="varios" class="content-section" style="display:none;">
+            <!-- <h2>Varios</h2> -->
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1rHyyYz1Ceotfd47ZuikEYOEjeMizu8Oq/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Equipamiento propio</button>
+            <button onclick="openFile('https://drive.google.com/file/d/1NuIQ1Ytcq9Fx3aLZvaWuREZzU6JJdH_b/view?usp=sharing')">Datos S.A.</button>
+            <button onclick="openFile('https://docs.google.com/document/d/1BiGKJPhTOPBPZRofbY1KbjD1MLGZnL-Ekjf_RW1ibQE/edit?usp=drive_link')">Contraseñas</button>
         </section>
     </main>
 </body>
