ampliaciónde perfil de usuarios

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -1,5 +1,3 @@
-<!-- profile.html -->
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -29,6 +27,21 @@
         <div class="profile-info" id="profile-info">
             <p><strong>Nombre:</strong> <span id="profile-name"></span></p>
             <p><strong>Correo Electrónico:</strong> <span id="profile-email"></span></p>
+            <h3>Perfil para la asignación de trabajo programado:</h3>
+            <p><strong>Trabaja en Neuquén:</strong> <span id="worksInNeuquen"></span></p>
+            <p><strong>Trabaja en Río Negro:</strong> <span id="worksInRioNegro"></span></p>
+            <p><strong>Hace Cardio:</strong> <span id="doesCardio"></span></p>
+            <p><strong>Hace Pediatría:</strong> <span id="doesPediatrics"></span></p>
+            <p><strong>Hace RNM:</strong> <span id="doesRNM"></span></p>
+            <p><strong>Hace Hospital:</strong> <span id="doesHospital"></span></p>
+            <h3>Esquema de trabajo programado:</h3>
+            <p><strong>Horario Lunes:</strong> <span id="workSchedule-monday"></span></p>
+            <p><strong>Horario Martes:</strong> <span id="workSchedule-tuesday"></span></p>
+            <p><strong>Horario Miércoles:</strong> <span id="workSchedule-wednesday"></span></p>
+            <p><strong>Horario Jueves:</strong> <span id="workSchedule-thursday"></span></p>
+            <p><strong>Horario Viernes:</strong> <span id="workSchedule-friday"></span></p>
+            <h3>Vacaciones Programadas:</h3>
+            <ul id="vacation-list"></ul>
             <button onclick="toggleChangePassword()" class="main-menu-button">Cambiar Contraseña</button>
         </div>
         <div class="change-password-form" id="change-password-form" style="display: none;">
