nuevas propiedades usuarios

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -48,6 +48,25 @@
                 <label for="doesHospital">Hace Hospital</label>
                 <input type="checkbox" id="doesHospital" name="doesHospital">
             </div>
+
+            <h3>Trabajos Específicos:</h3>
+            <div class="input-group">
+                <label for="worksInPublicNeuquen">Trabaja en público Neuquén</label>
+                <input type="checkbox" id="worksInPublicNeuquen" name="worksInPublicNeuquen">
+            </div>
+            <div class="input-group">
+                <label for="worksInPrivateNeuquen">Trabaja en privado Neuquén</label>
+                <input type="checkbox" id="worksInPrivateNeuquen" name="worksInPrivateNeuquen">
+            </div>
+            <div class="input-group">
+                <label for="worksInPublicRioNegro">Trabaja en público Río Negro</label>
+                <input type="checkbox" id="worksInPublicRioNegro" name="worksInPublicRioNegro">
+            </div>
+            <div class="input-group">
+                <label for="worksInPrivateRioNegro">Trabaja en privado Río Negro</label>
+                <input type="checkbox" id="worksInPrivateRioNegro" name="worksInPrivateRioNegro">
+            </div>
+
             <h3>Esquema de trabajo programado:</h3>
             <div class="input-group">
                 <label for="workSchedule-monday">Horario Lunes</label>
