--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -34,6 +34,11 @@
             <p><strong>Hace Pediatría:</strong> <span id="doesPediatrics"></span></p>
             <p><strong>Hace RNM:</strong> <span id="doesRNM"></span></p>
             <p><strong>Hace Hospital:</strong> <span id="doesHospital"></span></p>
+            <h3>Trabajos Específicos:</h3>
+            <p><strong>Trabaja en público Neuquén:</strong> <span id="worksInPublicNeuquen"></span></p>
+            <p><strong>Trabaja en privado Neuquén:</strong> <span id="worksInPrivateNeuquen"></span></p>
+            <p><strong>Trabaja en público Río Negro:</strong> <span id="worksInPublicRioNegro"></span></p>
+            <p><strong>Trabaja en privado Río Negro:</strong> <span id="worksInPrivateRioNegro"></span></p>
             <h3>Esquema de trabajo programado:</h3>
             <p><strong>Horario Lunes:</strong> <span id="workSchedule-monday"></span></p>
             <p><strong>Horario Martes:</strong> <span id="workSchedule-tuesday"></span></p>
@@ -73,3 +78,4 @@
     </main>
 </body>
 </html>
+
