--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -52,6 +52,10 @@
                 <label for="worksInPrivateRioNegro">Trabaja en privado Río Negro</label>
                 <input type="checkbox" id="worksInPrivateRioNegro" name="worksInPrivateRioNegro">
             </div>
+            <div class="input-group">
+                <label for="worksInCmacOnly">Trabaja sólo en CMAC</label>
+                <input type="checkbox" id="worksInCmacOnly" name="worksInCmacOnly">
+            </div>
             <h3>Esquema de trabajo programado:</h3>
             <div class="input-group">
                 <label for="workSchedule-monday">Horario Lunes</label>
