--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -35,6 +35,7 @@
             <p><strong>Trabaja en privado Neuquén:</strong> <span id="worksInPrivateNeuquen"></span></p>
             <p><strong>Trabaja en público Río Negro:</strong> <span id="worksInPublicRioNegro"></span></p>
             <p><strong>Trabaja en privado Río Negro:</strong> <span id="worksInPrivateRioNegro"></span></p>
+            <p><strong>Trabaja solo en CMAC:</strong> <span id="worksInCmacOnly"></span></p>
             <h3>Esquema de trabajo programado:</h3>
             <p><strong>Horario Lunes:</strong> <span id="workSchedule-monday"></span></p>
             <p><strong>Horario Martes:</strong> <span id="workSchedule-tuesday"></span></p>
