--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/media.css">
     <script src="js/forms.js" defer></script>
     <script defer src="js/auth.js"></script>
-    <script defer src="js/sessionTimeout.js"></script>
+    <!-- <script defer src="js/sessionTimeout.js"></script> -->
 </head>
 <body>
     <header>
