--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asistente de Programación Semanal</title>
     <link rel="stylesheet" href="css/weekly-schedule.css">
-    <script defer src="js/weekly-schedule.js"></script>
+    <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/autoAssign.js"></script>
 </head>
 <body>
