habilitación para programar desde el sabado

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -220,6 +220,15 @@
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
+                    <td class="work-site">Imágenes Hemo Matutino</td>
+                    <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
+                    <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
                     <td class="work-site">Imágenes Q1 Matutino</td>
                     <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
                     <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
@@ -269,14 +278,6 @@
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">Imágenes Hemo Matutino</td>
-                    <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
-                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
-                    <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
-                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
-                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
-                </tr>
                 <tr>
                     <td class="work-site">Imágenes 4to piso Matutino</td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
