corrección odd and even week

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -22,6 +22,7 @@
                 <li> Imprima programación: <button id="print-schedule-button">Imprimir Programación</button></li>
             </ol>
         </div>
+        <div id="availability-container" class="instructions"></div>
         <table>
             <thead>
                 <tr>
@@ -204,7 +205,7 @@
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
                     <td class="work-site">Hospital Cipolletti Vespertino</td>
-                    <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
@@ -226,6 +227,14 @@
                     <td class="droppable"><select></select><button class="lock-button">🔒</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔒</button></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Imágenes Hemo Largo</td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                 </tr>
                 <tr><td class="separator-thin" colspan="6"></td></tr>
                 <tr>
