Informe de anestesiólogos asignados

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -22,7 +22,8 @@
                 <li> Imprima programación: <button id="print-schedule-button">Imprimir Programación</button></li>
             </ol>
         </div>
-        <div id="availability-container" class="instructions"></div>
+        <div id="availability-container" class="instructions">
+        </div>
         <table>
             <thead>
                 <tr>
