Corección de condiciones para populate selects y agregado de bocas en heller

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -339,6 +339,22 @@
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                 </tr>
                 <tr>
+                    <td class="work-site">Hospital Heller Vespertino</td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Heller Largo</td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                    <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
+                </tr>
+                <tr>
                     <td class="work-site">Hospital Plottier Matutino</td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
                     <td class="droppable"><select disabled></select><button class="lock-button">🔓</button></td>
