Mejora visual del informe

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -13,7 +13,7 @@
         <h1>Asistente de Programación Semanal</h1>
     </header>
     <main>
-        <div class="instructions">
+        <!-- <div class="instructions">
             <h2>Pasos para generar programación:</h2>
             <ol>
                 <li> Verifique que los sitios que no se van a programar estén bloqueados y lo que se van a usar desbloqueados.</li>
@@ -21,7 +21,7 @@
                 <li> Modifique lo que se considere necesario.</li>
                 <li> Imprima programación: <button id="print-schedule-button">Imprimir Programación</button></li>
             </ol>
-        </div>
+        </div> -->
         <div id="availability-container" class="instructions">
         </div>
         <table>
