anestesiologos no asignados en informe

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -16,7 +16,7 @@
         <div class="instructions">
             <h3>Pasos para generar programación</h3>
             <ol>
-                <li> Setee las sitios de trabajo de acuerdo a la programación de clínicas y hospitales.</li>
+                <li> Setee los sitios de trabajo de acuerdo a la programación de clínicas y hospitales.</li>
                 <li> Si la cantidad de lugares de trabajo excede a la cantidad de anestesiólogos por día:
                     cambie días vespertinos/matutinos por días largos.</li>
                 <li> Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
