--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
     <script src="js/auth.js"></script>
-    <!-- <script src="js/sessionTimeout.js"></script> -->
+    <script src="js/sessionTimeout.js"></script>
     <script src="js/logout.js" defer></script>
 </head>
 <body>
