boton imprimir programación

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -22,14 +22,15 @@
                 <li> Si la cantidad de anestesiólogos excede a la cantidad de anestesiólogos por día:
                     cambie días días largos por días matutinos/vespertinos.</li>
                 <li> Realice la asignación por día hasta que la cantidad de anestesiólogos asignados sea igual
-                    a los disponibles.
+                    a los disponibles.</li>
+                <li> Imprima programación:</li><button id="print-schedule">Imprimir Programación</button>
             </ol>
         </div>
         <div id="availability-container" class="instructions">
         </div>
-        <div class="instructions">
+        <div>
         <h3>Asistente propiamente dicho</h3>
-        <table id="schedule-assistant">
+        <table class="schedule-assistant" id="schedule-assistant">
             <thead>
                 <tr>
                     <th class="work-site">Sitio de Trabajo</th>
