--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/autoAssign.js"></script>
+    <script type="module" src="js/printSchedule.js"></script>
 </head>
 <body>
     <header>
@@ -28,9 +29,9 @@
         </div>
         <div id="availability-container" class="instructions">
         </div>
-        <div>
+        <div class="schedule-assistant">
         <h3>Asistente propiamente dicho</h3>
-        <table class="schedule-assistant" id="schedule-assistant">
+        <table id="schedule-assistant">
             <thead>
                 <tr>
                     <th class="work-site">Sitio de Trabajo</th>
