impresion de programación

--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asistente de Programación Semanal</title>
     <link rel="stylesheet" href="css/weekly-schedule.css">
+    <link rel="stylesheet" href="css/header.css">
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" src="js/autoAssign.js"></script>
     <script type="module" src="js/printSchedule.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Asistente de Programación Semanal</h1>
-    </header>
+    <body>
+        <header>
+            <a href="index.html" class="app-logo-link">
+                <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
+            </a>
+            <h1>Anestesiólogos del Valle</h1>
+            <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
+                <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+            </a>
+        </header>
     <main>
         <div class="instructions">
             <h3>Pasos para generar programación</h3>
