--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,8 @@
     <main>
         <section id="programacion" class="content-section">
             <!-- <h2>Programación</h2> -->
+            <a href="weekly-schedule.html"><button>Asistente de programación semanal</button></a>
+            <a href="print-view.html"><button>Visualizacion de prueba</button></a>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
