--- a/frontend/print-view.html
+++ b/frontend/print-view.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumen de Programación</title>
     <link rel="stylesheet" href="css/weekly-schedule.css">
+    <link rel="stylesheet" href="css/header.css">
     <script type="module" defer src="js/displaySummary.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
     <header>
-        <h1>Resumen de Programación</h1>
+        <a href="index.html" class="app-logo-link">
+            <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
+        </a>
+        <h1>Anestesiólogos del Valle</h1>
+        <a href="weekly-schedule.html" class="back-to-main-menu" title="Volver al asistente de programación">
+            <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+        </a>
     </header>
     <main>
         <div class="summary-container" id="summary-container">
