corrección flujo app

--- a/frontend/print-view.html
+++ b/frontend/print-view.html
@@ -15,7 +15,7 @@
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
         </a>
         <h1>Anestesiólogos del Valle</h1>
-        <a href="weekly-schedule.html" class="back-to-main-menu" title="Volver al asistente de programación">
+        <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
             <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
         </a>
     </header>
