current schedule/inhabilitation of automatic schedule

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,8 @@
             <h3>Tus quirófanos asignados para esta semana son:(NO LE PRESTES ATENCIÓN A ESTO AHORA, ES UNA PRUEBA)
             </h3>
             <div id="user-assignments"></div>
-            <a href="weekly-schedule.html"><button>Asistente de programación semanal</button></a>
+            <a href="weekly-schedule.html"><button>Nueva programación</button></a>
+            <a href="current-weekly-schedule.html"><button>Modificar programación en curso</button></a>
             <a href="print-view.html"><button>Visualizacion de prueba</button></a>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
