--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     <script src="js/auth.js"></script>
     <script src="js/sessionTimeout.js"></script>
     <script src="js/logout.js" defer></script>
-    <script src="js/weekly-schedule-individualized.js" defer></script>
+    <!-- <script src="js/weekly-schedule-individualized.js" defer></script> -->
 </head>
 <body>
     <header>
@@ -48,12 +48,12 @@
     </nav>
     <main>
         <section id="programacion" class="content-section">
-            <h3>Tus quirófanos asignados para esta semana son:(NO LE PRESTES ATENCIÓN A ESTO AHORA, ES UNA PRUEBA)
+            <!-- <h3>Tus quirófanos asignados para esta semana son:(NO LE PRESTES ATENCIÓN A ESTO AHORA, ES UNA PRUEBA)
             </h3>
-            <div id="user-assignments"></div>
-            <a href="weekly-schedule.html"><button>Nueva programación</button></a>
+            <div id="user-assignments"></div> -->
+            <!-- <a href="weekly-schedule.html"><button>Nueva programación</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación en curso</button></a>
-            <a href="print-view.html"><button>Visualizacion de prueba</button></a>
+            <a href="print-view.html"><button>Visualizacion de prueba</button></a> -->
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
