styles index fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
     </nav>
     <main>
         <section id="programacion" class="content-section">
-            <h3>Tus quirófanos asignados para esta semana son:
+            <h3>Tus quirófanos asignados para esta semana son:</h3>
             <div id="user-assignments"></div>
             <a href="weekly-schedule.html"><button>Nueva programación</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación en curso</button></a>
