--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <script defer src="js/admin.js"></script>
+    <script src="js/spinner.js"></script>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
