--- a/frontend/print-view.html
+++ b/frontend/print-view.html
@@ -6,10 +6,13 @@
     <title>Resumen de Programación</title>
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <script type="module" defer src="js/displaySummary.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="js/spinner.js"></script>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
