--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css"> <!-- Usar login.css para estilos compartidos -->
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <script src="js/forms.js" defer></script>
     <script defer src="js/auth.js"></script>
-    <!-- <script defer src="js/sessionTimeout.js"></script> -->
+    <script src="js/spinner.js"></script>
+    <script defer src="js/sessionTimeout.js"></script>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
