--- a/frontend/recover-password.html
+++ b/frontend/recover-password.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="manifest" href="json/manifest.json">
+    <link rel="stylesheet" href="css/spinner.css">
     <meta name="theme-color" content="#0056b3">
     <script src="js/forms.js" defer></script>
+    <script src="js/spinner.js"></script>
 </head>
 <body>
     <header>
