--- a/frontend/register.html
+++ b/frontend/register.html
@@ -10,9 +10,13 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <meta name="theme-color" content="#0056b3">
+    <script src="js/spinner.js"></script>
+</head>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="login.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
