--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -10,11 +10,14 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <link rel="manifest" href="json/manifest.json">
     <meta name="theme-color" content="#0056b3">
     <script src="js/forms.js" defer></script>
+    <script src="js/spinner.js"></script>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="login.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
