--- a/frontend/weekly-schedule-image.html
+++ b/frontend/weekly-schedule-image.html
@@ -6,8 +6,11 @@
     <title>Imagen de la Programación Semanal</title>
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/spinner.css">
+    <script src="js/spinner.js"></script>
 </head>
 <body>
+    <div class="spinner" id="spinner"></div>
     <header>
         <a href="index.html" class="app-logo-link">
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
